feat: 상장 폐지 종목 삭제 구현